doc-surrealdb_versioned_docs/version-2.x/surrealql/statements/define/scope.mdx
---
sidebar_position: 10
sidebar_label: DEFINE SCOPE
title: DEFINE SCOPE statement | SurrealQL
description: Setting scope access allows SurrealDB to operate as a web database. With scopes you can set authentication and access rules which enable fine-grained access to tables and fields.
---

:::note
<em> Warning: </em> This statement is deprecated in favor of `DEFINE ACCESS ... TYPE RECORD`. Learn more in the [DEFINE ACCESS](/docs/surrealdb/2.x/surrealql/statements/define/access).
:::

import Since from '@site/src/components/Since'

# `DEFINE SCOPE` statement

Setting scope access allows SurrealDB to operate as a web database. With scopes you can set authentication and access rules which enable fine-grained access to tables and fields.

## Requirements

- You must be authenticated as a root or namespace user before you can use the `DEFINE SCOPE` statement.
- [You must select your namespace and database](/docs/surrealdb/2.x/surrealql/statements/use) before you can use the `DEFINE SCOPE` statement.

## Statement syntax

```surql title="SurrealQL Syntax"
DEFINE SCOPE [ IF NOT EXISTS ] @name SESSION @duration SIGNUP @expression SIGNIN @expression [ COMMENT @string ]
```

## Example usage
Below shows how you can create a scope using the `DEFINE SCOPE` statement.

```surql
-- Enable scope authentication directly in SurrealDB
DEFINE SCOPE account SESSION 24h
	SIGNUP ( CREATE user SET email = $email, pass = crypto::argon2::generate($pass) )
	SIGNIN ( SELECT * FROM user WHERE email = $email AND crypto::argon2::compare(pass, $pass) )
;
```

## Using `IF NOT EXISTS` clause 

<Since v="v1.3.0" />

The `IF NOT EXISTS` clause can be used to define a scope only if it does not already exist. If the scope already exists, the `DEFINE SCOPE` statement will return an error.

```surql
-- Create a SCOPE if it does not already exist
DEFINE SCOPE IF NOT EXISTS example;
```